--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -10,3 +10,4 @@ jobs:
       - uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          build_script: build-only
