--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -21,7 +21,7 @@
       "@reduxjs/toolkit/query": ["src/query/index.ts"],
       "@reduxjs/toolkit/query/react": ["src/query/react/index.ts"],
       "@reduxjs/toolkit/dist/query/*": ["src/query/*"],
-      "@virtual/*": ["docs/*"],
+      "@virtual/*": ["docs/virtual/*"],
       "your-cool-library": ["docs/virtual/your-cool-library/index.ts"],
       "petstore-api.generated": ["docs/virtual/petstore-api.generated/index.ts"]
     }
