fix docs build (#1094)

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -14,6 +14,16 @@
     "target": "ESNext",
     "allowJs": true,
     "checkJs": true,
-    "alwaysStrict": false
+    "alwaysStrict": false,
+    "baseUrl": "..",
+    "paths": {
+      "@reduxjs/toolkit": ["src/index.ts"],
+      "@reduxjs/toolkit/query": ["src/query/index.ts"],
+      "@reduxjs/toolkit/query/react": ["src/query/react/index.ts"],
+      "@reduxjs/toolkit/dist/query/*": ["src/query/*"],
+      "@virtual/*": ["docs/virtual/*"],
+      "your-cool-library": ["docs/virtual/your-cool-library/index.ts"],
+      "petstore-api.generated": ["docs/virtual/petstore-api.generated/index.ts"]
+    }
   }
 }
