--- a/package.json
+++ b/package.json
@@ -82,9 +82,9 @@
     "build-ci": "rimraf dist && tsc && node scripts/cli.js",
     "build": "rimraf dist && tsc && node scripts/cli.js --local",
     "build-only": "rimraf dist && tsc && node scripts/cli.js --skipExtraction",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\" \"**/*.md\"",
-    "format:check": "prettier --list-different \"src/**/*.{ts,tsx}\" \"docs/*/**.md\"",
-    "lint": "eslint src",
+    "format": "prettier --write \"(src|examples)/**/*.{ts,tsx}\" \"**/*.md\"",
+    "format:check": "prettier --list-different \"(src|examples)/**/*.{ts,tsx}\" \"docs/*/**.md\"",
+    "lint": "eslint src examples",
     "prepare": "true",
     "test": "jest --runInBand",
     "type-tests": "yarn tsc -p src/tests && yarn tsc -p src/query/tests"
