--- a/netlify.toml
+++ b/netlify.toml
@@ -13,5 +13,5 @@ NODE_OPTIONS = "--max_old_space_size=4096"
   [plugins.inputs]
     paths = [
       "node_modules/.cache",
-      "website/node_modules/.cache
+      "website/node_modules/.cache"
     ]
