--- a/examples/query/react/graphql/package.json
+++ b/examples/query/react/graphql/package.json
@@ -23,11 +23,19 @@
     "react-scripts": "4.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^2.0.2",
+    "@graphql-codegen/cli": "1.21.5",
+    "@graphql-codegen/introspection": "^1.18.2",
+    "@graphql-codegen/typed-document-node": "^1.18.6",
+    "@graphql-codegen/typescript": "1.22.1",
+    "@graphql-codegen/typescript-operations": "^1.18.0",
+    "@graphql-typed-document-node/core": "^3.1.0",
     "@types/faker": "^5.5.5",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
+    "ts-node": "^10.0.0",
     "typescript": "4.1.3"
   },
   "resolutions": {
@@ -36,7 +44,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "prebuild": "rm -rf dist/"
+    "prebuild": "rm -rf dist/",
+    "graphql-codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
