Add 'redux-toolkit' keyword

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "reducer",
     "slice",
     "immer",
-    "immutable"
+    "immutable",
+    "redux-toolkit"
   ],
   "publishConfig": {
     "access": "public"
