run prepare everywhere except CI

--- a/package.json
+++ b/package.json
@@ -82,13 +82,15 @@
   },
   "scripts": {
     "build-ci": "rimraf dist && tsc && node scripts/cli.js",
+    "build-prepare": "npm run build-ci",
     "build": "rimraf dist && tsc && node scripts/cli.js --local",
     "build-only": "rimraf dist && tsc && node scripts/cli.js --skipExtraction",
     "format": "prettier --write \"(src|examples)/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"(src|examples)/**/*.{ts,tsx}\" \"docs/*/**.md\"",
     "lint": "eslint src examples",
     "test": "jest --runInBand",
-    "type-tests": "yarn tsc -p src/tests && yarn tsc -p src/query/tests"
+    "type-tests": "yarn tsc -p src/tests && yarn tsc -p src/query/tests",
+    "prepare": "node -e 'process.exit(process.env.CI?0:1)' || npm run build-prepare"
   },
   "files": [
     "dist/**/*.js",
