examples and docs working again

--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.1.5",
     "graphql-request": "^3.4.0",
     "immutable": "^3.8.2",
+    "nanoid": "^3.1.23",
     "rxjs": "^6.6.2"
   }
 }
