--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -17,10 +17,12 @@
     "alwaysStrict": false,
     "baseUrl": "..",
     "paths": {
-      "@reduxjs/toolkit": ["src/index.ts"],
-      "@reduxjs/toolkit/query": ["src/query/index.ts"],
-      "@reduxjs/toolkit/query/react": ["src/query/react/index.ts"],
-      "@reduxjs/toolkit/dist/query/*": ["src/query/*"],
+      "@reduxjs/toolkit": ["packages/toolkit/src/index.ts"],
+      "@reduxjs/toolkit/query": ["packages/toolkit/src/query/index.ts"],
+      "@reduxjs/toolkit/query/react": [
+        "packages/toolkit/src/query/react/index.ts"
+      ],
+      "@reduxjs/toolkit/dist/query/*": ["packages/toolkit/src/query/*"],
       "@virtual/*": ["docs/virtual/*"],
       "your-cool-library": ["docs/virtual/your-cool-library/index.ts"],
       "petstore-api.generated": ["docs/virtual/petstore-api.generated/index.ts"]
