--- a/examples/query/react/optimistic-update/package.json
+++ b/examples/query/react/optimistic-update/package.json
@@ -29,9 +29,6 @@
     "typescript": "4.1.3",
     "whatwg-fetch": "^3.4.1"
   },
-  "resolutions": {
-    "@typescript-eslint/parser": "4.4.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,7 +37,10 @@
   "eslintConfig": {
     "extends": [
       "react-app"
-    ]
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "browserslist": [
     ">0.2%",
