--- a/examples/query/react/polling/package.json
+++ b/examples/query/react/polling/package.json
@@ -21,7 +21,10 @@
   "eslintConfig": {
     "extends": [
       "react-app"
-    ]
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
