--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -9,5 +9,6 @@ jobs:
       - uses: actions/checkout@v1
       - uses: andresz1/size-limit-action@v1
         with:
+          directory: packages/toolkit
           github_token: ${{ secrets.GITHUB_TOKEN }}
           build_script: build-only
