--- a/examples/query/react/authentication-with-extrareducers/package.json
+++ b/examples/query/react/authentication-with-extrareducers/package.json
@@ -24,7 +24,7 @@
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
-    "typescript": "4.1.3"
+    "typescript": "~4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
