--- a/examples/query/react/basic/package.json
+++ b/examples/query/react/basic/package.json
@@ -16,7 +16,7 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
-    "typescript": "4.1.3"
+    "typescript": "~4.2.4"
   },
   "eslintConfig": {
     "extends": [
