--- a/examples/query/react/optimistic-update/package.json
+++ b/examples/query/react/optimistic-update/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
-    "typescript": "4.1.3",
+    "typescript": "~4.2.4",
     "whatwg-fetch": "^3.4.1"
   },
   "scripts": {
