--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,20 @@
 [build]
   base    = "website"
   publish = "build"
-  command = "npm run netlify-build  && cp _redirects ./build"
+  command = "yarn run netlify-build && ls  && cp _redirects ./build"
   ignore = "git diff --quiet HEAD^ HEAD docs website"
 
 [build.environment]
 NODE_VERSION = "14"
 NODE_OPTIONS = "--max_old_space_size=4096"
+NETLIFY_USE_YARN = "true"
+YARN_VERSION = "1.22.10"
 
 [[plugins]]
   package = "netlify-plugin-cache"
   [plugins.inputs]
     paths = [
       "node_modules/.cache",
-      "website/node_modules/.cache"
+      "website/node_modules/.cache",
+      ".yarn/.cache"
     ]
