chores: move examples to current RC

--- a/examples/query/react/graphql/package.json
+++ b/examples/query/react/graphql/package.json
@@ -9,7 +9,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@mswjs/data": "^0.3.0",
-    "@reduxjs/toolkit": "^1.6.0-beta.0",
+    "@reduxjs/toolkit": "^1.6.0-rc.1",
     "faker": "^5.5.3",
     "framer-motion": "^2.9.5",
     "graphql": "^15.5.0",
