--- a/examples/query/react/conditional-fetching/package.json
+++ b/examples/query/react/conditional-fetching/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.0-beta.0",
+    "@reduxjs/toolkit": "^1.6.0-rc.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-redux": "7.2.2",
