--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,7 +78,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ['14.x']
-        ts: ['3.9', '4.0', '4.1', '4.2', 'next']
+        ts: ['3.9', '4.0', '4.1', '4.2', '4.3', 'next']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
