--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -110,6 +110,10 @@ jobs:
         if: ${{ matrix.ts < 4.1 }}
         run: sed -i -e 's/@pre41-ts-ignore/@ts-ignore/' -e  '/pre41-remove-start/,/pre41-remove-end/d' ./src/tests/*.* ./src/query/tests/*.ts*
 
+      - name: 'disable strictOptionalProperties'
+        if: ${{ matrix.ts == 'next' }}
+        run: sed -i -e 's|//\(.*strictOptionalProperties.*\)$|\1|' tsconfig.base.json
+
       - name: Test types
         run: |
           ./node_modules/.bin/tsc --version
