--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,7 +78,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ['14.x']
-        ts: ['3.9', '4.0', '4.1', '4.2', 'next']
+        ts: ['3.9', '4.0', '4.1', '4.2', '4.3', 'next']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -109,6 +109,10 @@ jobs:
       - name: "@ts-ignore stuff that didn't exist pre-4.1 in the tests"
         if: ${{ matrix.ts < 4.1 }}
         run: sed -i -e 's/@pre41-ts-ignore/@ts-ignore/' -e  '/pre41-remove-start/,/pre41-remove-end/d' ./src/tests/*.* ./src/query/tests/*.ts*
+
+      - name: 'disable strictOptionalProperties'
+        if: ${{ matrix.ts == 'next' }}
+        run: sed -i -e 's|//\(.*strictOptionalProperties.*\)$|\1|' tsconfig.base.json
 
       - name: Test types
         run: |
