--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prettier": "^2.2.1"
   },
   "resolutions": {
-    "react-scripts": "patch:react-scripts@npm:4.0.2#.yarn/patches/react-scripts@npm:4.0.2.patch",
+    "react-scripts": "patch:react-scripts@npm:4.0.2#.yarn/patches/react-scripts__npm_4.0.2.patch",
     "react-redux": "npm:7.2.4",
     "react": "npm:17.0.2",
     "react-dom": "npm:17.0.2"
@@ -44,6 +44,6 @@
   "scripts": {
     "build:examples": "yarn workspaces foreach --include '@reduxjs/*' --include '@examples-query-react/*' -vtp run build",
     "build:docs": "yarn workspace docs run build",
-    "build:package": "yarn workspace @reduxjs/toolkit run build"
+    "build:packages": "yarn workspace @reduxjs/toolkit run build"
   }
 }
