--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "graphql": "^15.5.0",
     "microbundle": "^0.13.3",
     "typescript": "^4.3.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
