--- a/examples/query/react/graphql-codegen/package.json
+++ b/examples/query/react/graphql-codegen/package.json
@@ -8,8 +8,9 @@
     "@chakra-ui/react": "1.0.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@mswjs/data": "^0.3.0",
+    "@mswjs/data": "npm:@phryneas/mswjs-data-prerelease@0.3.1-672226d",
     "@reduxjs/toolkit": "^1.6.0",
+    "@rtk-query/graphql-request-base-query": "^1.0.3",
     "faker": "^5.5.3",
     "framer-motion": "^2.9.5",
     "graphql": "^15.5.0",
@@ -30,6 +31,7 @@
     "@graphql-codegen/typed-document-node": "^1.18.6",
     "@graphql-codegen/typescript": "1.22.1",
     "@graphql-codegen/typescript-operations": "^1.18.0",
+    "@graphql-codegen/typescript-rtk-query": "^1.0.0",
     "@graphql-typed-document-node/core": "^3.1.0",
     "@types/faker": "^5.5.5",
     "@types/react": "17.0.0",
