--- a/examples/query/react/graphql-codegen/package.json
+++ b/examples/query/react/graphql-codegen/package.json
@@ -31,13 +31,14 @@
     "@graphql-codegen/typed-document-node": "^1.18.6",
     "@graphql-codegen/typescript": "1.22.1",
     "@graphql-codegen/typescript-operations": "^1.18.0",
-    "@graphql-codegen/typescript-rtk-query": "^1.0.0",
+    "@graphql-codegen/typescript-rtk-query": "^1.1.0",
     "@graphql-typed-document-node/core": "^3.1.0",
     "@types/faker": "^5.5.5",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
+    "concurrently": "^6.2.0",
     "ts-node": "^10.0.0",
     "typescript": "4.1.3"
   },
@@ -45,7 +46,9 @@
     "@typescript-eslint/parser": "4.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently  'npm:watch-*'",
+    "watch-CRA": "react-scripts start",
+    "watch-codegen": "graphql-codegen --config codegen.yml --watch",
     "build": "react-scripts build",
     "prebuild": "rm -rf dist/",
     "graphql-codegen": "graphql-codegen --config codegen.yml"
