Initial set of tests for basic example for review

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ typesversions
 .cache
 .yarn
 .yarnrc
+
+# Ignore package-lock.json from example projects
+examples/query/react/**/package-lock.json
