--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "test": "yarn test:packages",
     "build:examples": "yarn workspaces foreach --include '@reduxjs/*' --include '@examples-query-react/*' -vtp run build",
     "build:docs": "yarn workspace docs run build",
-    "build:packages": "yarn workspaces foreach --include '@reduxjs/*' --include '@rtk-query/*' run build",
+    "build:packages": "yarn workspaces foreach --include '@reduxjs/*' --include '@rtk-query/*' --topological-dev run build",
     "test:packages": "yarn workspaces foreach --include '@reduxjs/*' --include '@rtk-query/*' run test"
   }
 }
