--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "react-dom": "npm:17.0.2"
   },
   "scripts": {
+    "build": "yarn build:packages",
+    "test": "yarn test:packages",
     "build:examples": "yarn workspaces foreach --include '@reduxjs/*' --include '@examples-query-react/*' -vtp run build",
     "build:docs": "yarn workspace docs run build",
-    "build:packages": "yarn workspace @reduxjs/toolkit run build"
+    "build:packages": "yarn workspaces foreach --include '@reduxjs/*' --include '@rtk-query/*' --topological-dev run build",
+    "test:packages": "yarn workspaces foreach --include '@reduxjs/*' --include '@rtk-query/*' run test"
   }
 }
