--- a/examples/query/react/basic/package.json
+++ b/examples/query/react/basic/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.23",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
@@ -27,7 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test --runInBand"
   },
   "browserslist": [
     ">0.2%",
