--- a/examples/query/react/graphql-codegen/package.json
+++ b/examples/query/react/graphql-codegen/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
+    "@types/webpack-env": "^1.16.0",
     "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
     "ts-node": "^10.0.0",
