--- a/examples/query/react/basic/package.json
+++ b/examples/query/react/basic/package.json
@@ -13,9 +13,12 @@
     "react-scripts": "4.0.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.23",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
+    "msw": "^0.30.0",
     "typescript": "~4.2.4"
   },
   "eslintConfig": {
@@ -28,7 +31,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test --runInBand"
   },
   "browserslist": [
     ">0.2%",
