--- a/examples/query/react/graphql-codegen/package.json
+++ b/examples/query/react/graphql-codegen/package.json
@@ -8,7 +8,7 @@
     "@chakra-ui/react": "1.0.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@mswjs/data": "npm:@phryneas/mswjs-data-prerelease@0.3.1-672226d",
+    "@mswjs/data": "^0.4.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@rtk-query/graphql-request-base-query": "^1.0.3",
     "faker": "^5.5.3",
