--- a/examples/query/react/graphql/package.json
+++ b/examples/query/react/graphql/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.3.0",
     "@mswjs/data": "^0.3.0",
     "@reduxjs/toolkit": "^1.6.0-rc.1",
+    "@rtk-query/graphql-request-base-query": "workspace:packages/rtk-query-graphql-request-base-query",
     "faker": "^5.5.3",
     "framer-motion": "^2.9.5",
     "graphql": "^15.5.0",
