--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@reduxjs/toolkit": "^1.6.0-alpha.2",
+    "@reduxjs/toolkit": "^1.6.0",
     "@types/commander": "^2.12.2",
     "@types/glob-to-regexp": "^0.4.0",
     "@types/jest": "^26.0.20",
