--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "msw": "^0.25.0",
+    "openapi-types": "^9.1.0",
     "pretty-quick": "^3.1.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.0",
