--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
     "immutable": "^3.8.2",
     "nanoid": "^3.1.23",
     "next-redux-wrapper": "^7.0.5",
+    "redux-persist": "^6.0.0",
     "rxjs": "^6.6.2"
   }
 }
