--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prepare": "npm run build && chmod +x ./lib/bin/cli.js",
     "format": "prettier --write \"src/**/*.ts\"",
     "test:update": "lib/bin/cli.js test/fixtures/petstore.json --file test/fixtures/generated.ts -h",
-    "test": "jest"
+    "test": "jest",
+    "cli": "esr src/bin/cli.ts"
   },
   "files": [
     "lib",
@@ -34,6 +35,7 @@
     "babel-jest": "^26.6.3",
     "chalk": "^4.1.0",
     "del": "^6.0.0",
+    "esbuild": "^0.13.10",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "msw": "^0.25.0",
@@ -46,6 +48,7 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.2",
     "commander": "^6.2.0",
+    "esbuild-runner": "^2.2.1",
     "glob-to-regexp": "^0.4.1",
     "oazapfts": "3.4.0",
     "prettier": "^2.2.1",
