--- a/.github/workflows/test-codegen.yml
+++ b/.github/workflows/test-codegen.yml
@@ -6,11 +6,7 @@ defaults:
   run:
     working-directory: ./packages/rtk-query-codegen-openapi
 
-on:
-  push:
-    branches: [main, next]
-  pull_request:
-    branches: [main, next]
+on: [push, pull_request]
 
 jobs:
   build:
