only run relevant tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,24 @@ defaults:
     working-directory: ./packages/toolkit
 
 jobs:
+  changes:
+    name: Check for changes
+    runs-on: ubuntu-latest
+    outputs:
+      toolkit: ${{ steps.filter.outputs.toolkit }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            toolkit:
+              - 'packages/toolkit/**'
+
   build:
+    needs: changes
+    if: ${{ needs.changes.outputs.toolkit == 'true' }}
+
     name: Lint, Test, Build & Pack on Node ${{ matrix.node }}
 
     runs-on: ubuntu-latest
