--- a/.github/workflows/test-codegen.yml
+++ b/.github/workflows/test-codegen.yml
@@ -9,7 +9,24 @@ defaults:
 on: [push, pull_request]
 
 jobs:
+  changes:
+    name: Check for changes
+    runs-on: ubuntu-latest
+    outputs:
+      codegen: ${{ steps.filter.outputs.codegen }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            codegen:
+              - 'packages/rtk-query-codegen-openapi/**'
+
   build:
+    needs: changes
+    if: ${{ needs.changes.outputs.codegen == 'true' }}
+
     runs-on: ubuntu-latest
 
     strategy:
