--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,7 +3,5 @@ nodeLinker: node-modules
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
-  - path: .yarn/plugins/@yarnpkg/plugin-compat.cjs
-    spec: '@yarnpkg/plugin-compat'
 
-yarnPath: .yarn/releases/yarn-berry.cjs
+yarnPath: .yarn/releases/yarn-3.1.0.cjs
