--- a/packages/rtk-query-codegen-openapi/package.json
+++ b/packages/rtk-query-codegen-openapi/package.json
@@ -63,6 +63,18 @@
     "swagger2openapi": "^7.0.4",
     "typescript": ">=4.1 <=4.5"
   },
+  "peerDependencies": {
+    "esbuild-runner": "^2.2.1",
+    "ts-node": "^10.4.0"
+  },
+  "peerDependenciesMeta": {
+    "esbuild-runner": {
+      "optional": true
+    },
+    "ts-node": {
+      "optional": true
+    }
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
