--- a/examples/action-listener/counter/package.json
+++ b/examples/action-listener/counter/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0-rc.1",
-    "@rtk-incubator/action-listener-middleware": "0.3.0",
+    "@rtk-incubator/action-listener-middleware": "^0.6.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "7.2.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2"
+    "typescript": "~4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
