--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "axios": "^0.19.2",
+    "concurrently": "^6.2.0",
     "console-testing-library": "^0.3.1",
     "convert-source-map": "^1.7.0",
     "cross-fetch": "^3.1.4",
@@ -84,7 +85,7 @@
     "build-prepare": "npm run build-ci",
     "build": "yarn rimraf dist && yarn tsc && node scripts/cli.js --local --skipExtraction",
     "build-only": "yarn rimraf dist && yarn tsc && node scripts/cli.js --skipExtraction",
-    "dev": "node scripts/cli.js --local --skipExtraction --watch",
+    "dev": "concurrently \"yarn tsc -w\" \"node scripts/cli.js --local --skipExtraction --watch\"",
     "format": "prettier --write \"(src|examples)/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"(src|examples)/**/*.{ts,tsx}\" \"docs/*/**.md\"",
     "lint": "eslint src examples",
