--- a/docs/package.json
+++ b/docs/package.json
@@ -6,6 +6,7 @@
     "@types/react": "^16.9.46",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
+    "async-mutex": "^0.3.2",
     "axios": "^0.20.0",
     "formik": "^2.1.5",
     "graphql-request": "^3.4.0",
