--- a/examples/action-listener/counter/package.json
+++ b/examples/action-listener/counter/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.0-rc.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "lint:ts": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": [
