docs(alm): add listener tests to counter example
- Description

Why: We have received questions about how to test listeners

--- a/examples/action-listener/counter/package.json
+++ b/examples/action-listener/counter/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint:ts": "tsc --noEmit"
+    "lint:ts": "tsc --noEmit",
+    "test": "react-scripts test --runInBand"
   },
   "eslintConfig": {
     "extends": [
