--- a/examples/query/react/kitchen-sink/package.json
+++ b/examples/query/react/kitchen-sink/package.json
@@ -6,10 +6,12 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "@reduxjs/toolkit": "workspace:^",
+    "@reduxjs/toolkit": "1.8.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-redux": "7.2.2",
+    "msw": "^0.39.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.2"
   },
   "devDependencies": {
@@ -20,7 +22,6 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
-    "msw": "^0.39.2",
     "typescript": "~4.2.4",
     "whatwg-fetch": "^3.4.1"
   },
