--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,7 +96,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ['14.x']
-        ts: ['4.1', '4.2', '4.3', '4.4', '4.5', '4.6.1-rc', 'next']
+        ts: ['4.1', '4.2', '4.3', '4.4', '4.5', '4.6', '4.7.0-beta', 'next']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -122,10 +122,6 @@ jobs:
         run: yarn add ./package.tgz
 
       - run: sed -i -e /@remap-prod-remove-line/d ./tsconfig.base.json ./jest.config.js ./src/tests/*.* ./src/query/tests/*.*
-
-      - name: "@ts-ignore stuff that didn't exist pre-4.1 in the tests"
-        if: ${{ matrix.ts < 4.1 }}
-        run: sed -i -e 's/@pre41-ts-ignore/@ts-ignore/' -e  '/pre41-remove-start/,/pre41-remove-end/d' ./src/tests/*.* ./src/query/tests/*.ts*
 
       - name: Test types
         run: |
