--- a/examples/query/react/graphql/package.json
+++ b/examples/query/react/graphql/package.json
@@ -16,7 +16,7 @@
     "framer-motion": "^2.9.5",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
-    "msw": "0.28.2",
+    "msw": "^0.39.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "3.11.0",
