--- a/examples/query/react/mutations/package.json
+++ b/examples/query/react/mutations/package.json
@@ -12,7 +12,7 @@
     "@mswjs/data": "^0.3.0",
     "@reduxjs/toolkit": "^1.6.0-rc.1",
     "framer-motion": "^2.9.5",
-    "msw": "0.28.2",
+    "msw": "^0.39.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "3.11.0",
