--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-redux": "npm:7.2.4",
     "react": "npm:17.0.2",
     "react-dom": "npm:17.0.2",
-    "@types/inquirer": "npm:8.2.1"
+    "@types/inquirer": "npm:8.2.1",
+    "msw/type-fest": "npm:2.12.2"
   },
   "scripts": {
     "build": "yarn build:packages",
