--- a/examples/query/react/graphql-codegen/package.json
+++ b/examples/query/react/graphql-codegen/package.json
@@ -16,10 +16,10 @@
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "msw": "0.28.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-icons": "3.11.0",
-    "react-redux": "^7.2.4",
+    "react-redux": "^8.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2"
   },
@@ -34,9 +34,8 @@
     "@graphql-codegen/typescript-rtk-query": "^1.1.0",
     "@graphql-typed-document-node/core": "^3.1.0",
     "@types/faker": "^5.5.5",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-redux": "7.1.9",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "5.1.6",
     "@types/webpack-env": "^1.16.0",
     "concurrently": "^6.2.0",
