--- a/examples/query/react/kitchen-sink/package.json
+++ b/examples/query/react/kitchen-sink/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.8.1",
     "msw": "^0.41.1",
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
-    "react-redux": "7.2.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.2"
   },
@@ -19,9 +19,8 @@
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.6",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-redux": "7.1.9",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.5",
     "typescript": "~4.2.4",
     "whatwg-fetch": "^3.4.1"
   },
