--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   "resolutions": {
     "react-scripts": "patch:react-scripts@npm:4.0.2#.yarn/patches/react-scripts__npm_4.0.2.patch",
     "console-testing-library": "patch:console-testing-library@npm:0.3.1#.yarn/patches/console-testing-library__npm_0.3.1.patch",
-    "react-redux": "npm:7.2.4",
-    "react": "npm:17.0.2",
-    "react-dom": "npm:17.0.2",
+    "react-redux": "npm:8.0.2",
+    "react": "npm:18.1.0",
+    "react-dom": "npm:18.1.0",
+    "@types/react": "npm:18.0.12",
+    "@types/react-dom": "npm:18.0.5",
     "@types/inquirer": "npm:8.2.1"
   },
   "scripts": {
