--- a/website/package.json
+++ b/website/package.json
@@ -12,8 +12,8 @@
     "@docusaurus/core": "2.0.0-beta.7",
     "@docusaurus/preset-classic": "2.0.0-beta.7",
     "classnames": "^2.2.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-lite-youtube-embed": "^2.0.3",
     "remark-typescript-tools": "^1.0.8",
     "typescript": "~4.2.4"
