⚗️ Check tsc version via package.json cmd

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -129,5 +129,5 @@ jobs:
 
       - name: Test types
         run: |
-          yarn tsc --version
+          yarn tsc-version
           yarn type-tests
