Enable Node ESM tests for RTK 2.0

--- a/examples/publish-ci/node-esm/package.json
+++ b/examples/publish-ci/node-esm/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "echo Done",
-    "test": "node test-cjs.cjs"
+    "test": "node test-cjs.cjs && node test-esm.mjs"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
