fix: Files whitelist

--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -109,6 +109,7 @@
   },
   "files": [
     "dist/**/*.js",
+    "dist/**/*.mjs",
     "dist/**/*.js.map",
     "dist/**/*.d.ts",
     "dist/**/package.json",
