create react specific entry point

--- a/packages/toolkit/tsconfig.base.json
+++ b/packages/toolkit/tsconfig.base.json
@@ -35,6 +35,7 @@
     "types": ["vitest/globals"],
     "paths": {
       "@reduxjs/toolkit": ["src/index.ts"], // @remap-prod-remove-line
+      "@reduxjs/toolkit/react": ["src/react/index.ts"], // @remap-prod-remove-line
       "@reduxjs/toolkit/query": ["src/query/index.ts"], // @remap-prod-remove-line
       "@reduxjs/toolkit/query/react": ["src/query/react/index.ts"], // @remap-prod-remove-line
       // for type imports in tests only
