--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -190,10 +190,16 @@ jobs:
         run: yarn add ./package.tgz
 
       - name: Show installed RTK versions
-        run: yarn info @reduxjs/toolkit
+        run: yarn info @reduxjs/toolkit && yarn why @reduxjs/toolkit
 
       - name: Build example
         run: yarn build
 
       - name: Run test step
         run: yarn test
+        if: matrix.example != 'are-the-types-wrong'
+
+      - name: Run test step (attw)
+        # Ignore "FalseCJS" errors in the `attw` job
+        run: yarn test -n FalseCJS
+        if: matrix.example == 'are-the-types-wrong'
