--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -22,7 +22,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "module": "dist/redux-toolkit.esm.mjs",
+  "module": "dist/redux-toolkit.legacy-esm.js",
   "main": "dist/cjs/index.js",
   "types": "dist/index.d.ts",
   "exports": {
@@ -98,7 +98,7 @@
     "run-build": "tsx ./scripts/build.ts",
     "build-ci": "yarn rimraf dist && yarn tsc && yarn run-build --skipExtraction",
     "build-prepare": "npm run build-ci",
-    "build": "yarn rimraf dist && yarn tsc && yarn run-build --local --skipExtraction",
+    "build": "yarn rimraf dist && echo Compiling... && yarn tsc && yarn run-build --local --skipExtraction",
     "build-only": "yarn rimraf dist && yarn tsc && yarn run-build --skipExtraction",
     "format": "prettier --write \"(src|examples)/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"(src|examples)/**/*.{ts,tsx}\" \"docs/*/**.md\"",
