add react folder to files

--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -114,7 +114,8 @@
   "files": [
     "dist/",
     "src/",
-    "query"
+    "query",
+    "react"
   ],
   "dependencies": {
     "immer": "^10.0.0-beta.4",
